# cookiecutter-pypackage-fork

./: .gitignore  README.rst  cookiecutter.json  requirements_dev.txt  setup.py
.github/: create_release_from_gitlab_ci.sh
.github/workflows/: build-pipeline.yml
docs/: prompts.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .env.txt  .gitignore  .gitlab-ci.yml  .pre-commit-config-yaml  .pre-commit-config.yaml  AUTHORS.rst  CITATION  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  compose.yaml  pyproject.toml  ruff.toml  run.py  setup.cfg  setup.py  tox.ini  {{cookiecutter.project_slug}}_cli.py
{{cookiecutter.project_slug}}/docs/: Makefile  authors.rst  conf.py  contributing.rst  history.rst  index.html  index.rst  installation.rst  make.bat  readme.rst  usage.rst
{{cookiecutter.project_slug}}/docs/_static/: custom.css
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  version.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/CI_docker/: build_{{cookiecutter.project_slug}}_testsuite_image.sh
{{cookiecutter.project_slug}}/tests/CI_docker/context/: environment_{{cookiecutter.project_slug}}.yml  {{cookiecutter.project_slug}}_ci.docker
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  create_app.py  run.py  version.py  {{cookiecutter.project_slug}}.py  {{cookiecutter.project_slug}}_cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: __init__.py  config.ini  config.py  config_parser.py  env.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/routes/: __init__.py  api.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/routes/endpoints/: home.py  item.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/schemas/: __init__.py  general.py  item.py
